--- a/frontend/index.html
+++ b/frontend/index.html
@@ -81,7 +81,18 @@
       </div>
     </div>
 
-    
+    <!-- マイページ画面 -->
+    <div id="myPageScreen" class="screen">
+      <div class="mypage-header">
+        <button id="myPageBackBtn" class="btn btn-back">← 戻る</button>
+        <h2>📌 マイページ - あなたの投稿</h2>
+        <button id="myPageNewPostBtn" class="btn btn-primary">+ 新しい投稿</button>
+      </div>
+      <div id="myPageList" class="novel-list">
+        <p class="loading">読み込み中...</p>
+      </div>
+    </div>
+
     <div id="formScreen" class="screen">
       <div class="form-header">
         <button id="backBtn" class="btn btn-back">← 戻る</button>
