Refactor: Separate MyPage and MainPage logic into different files

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -173,6 +173,8 @@
   </footer>
 
   <script src="js/app.js"></script>
+  <script src="js/pages/mainpage.js"></script>
+  <script src="js/pages/mypage.js"></script>
   <button id="myPageBtn" class="btn btn-primary mypage-btn" title="マイページ">マイページ</button>
 </body>
 </html>
