--- a/frontend/index.html
+++ b/frontend/index.html
@@ -125,7 +125,7 @@
         </div>
 
         <div class="form-group">
-          <label for="rating">評価 ★</label>
+          <label>評価 ★</label>
           <div class="rating-selector">
             <input type="radio" id="star1" name="rating" value="1">
             <label for="star1">★☆☆☆☆</label>
@@ -175,6 +175,6 @@
   <script src="js/app.js"></script>
   <script src="js/pages/mainpage.js"></script>
   <script src="js/pages/mypage.js"></script>
-  <button id="myPageBtn" class="btn btn-primary mypage-btn" title="マイページ">マイページ</button>
+  <button id="myPageBtn" class="btn btn-primary mypage-btn" title="マイページ" onclick="typeof showMyPage === 'function' ? showMyPage() : console.error('showMyPage not defined')">マイページ</button>
 </body>
 </html>
