Feat: Add genre filter and improve design | Fix: Correct edit permission bug

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -74,6 +74,20 @@
 
     <div id="listScreen" class="screen">
       <div class="controls">
+        <div class="filter-section">
+          <label for="genreFilter">ジャンルで検索:</label>
+          <select id="genreFilter" name="genre">
+            <option value="">すべて</option>
+            <option value="恋愛">恋愛</option>
+            <option value="ファンタジー">ファンタジー</option>
+            <option value="冒険">冒険</option>
+            <option value="推理">推理</option>
+            <option value="歴史">歴史</option>
+            <option value="SF">SF</option>
+            <option value="短編集">短編集</option>
+            <option value="その他">その他</option>
+          </select>
+        </div>
         <button id="newPostBtn" class="btn btn-primary">+ 新しい投稿</button>
       </div>
       <div id="novelList" class="novel-list">
